--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ratelimit"
-version = "0.4.5-alpha.0"
-authors = ["Brian Martin <brayniac@gmail.com>"]
+version = "0.5.0"
+authors = ["Brian Martin <brayniac@gmail.com>", "DCjanus <dcjanus@dcjanus.com>"]
 edition = "2018"
 
 license = "MIT/Apache-2.0"
